--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "hp-iframe",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "authors": [
     "blainekasten <blainekasten@gmail.com>"
   ],
   "description": "Desired way of loading the HonestPolicy Iframe",
   "main": "dist/hp-iframe.js",
-  "homepage": "https://github.com/honestpolicy/hp-iframe",
+  "homepage": "https://github.com/honestpolicy/HPIframe.git",
   "keywords": [
     "iframe",
     "HonestPolicy",
